# SDLJoystick

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: controller.c  controller.h  main.c
